# configure.ac for csv_test

# Name and version
AC_INIT([csv_test], [0.1])

# Don't clutter main dir
AC_CONFIG_AUX_DIR([build-aux])

# Init automake
AM_INIT_AUTOMAKE([1.13 subdir-objects -Wall -Werror ])

# Output 'Makefile'
AC_CONFIG_FILES([Makefile])

# Check on C++ compiler
AC_PROG_CXX

# Final output
AC_OUTPUT
